datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  passwordHash String
  firstname String?
  middlename String?
  lastname  String?
  title     Title?
  dob       DateTime?
  gender    Gender?
  mobile    String?  @unique
  isEmailVerified   Boolean @default(false)
  isMobileVerified  Boolean @default(false)
  preferredLanguage String  @default("en")
  status    UserStatus @default(ACTIVE)
  lastLoginAt DateTime?
  role      Role
  createdBy String?
  createdByUser User? @relation("UserCreatedBy", fields: [createdBy], references: [id])
  createdUsers User[] @relation("UserCreatedBy")
  posts     Post[]
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

enum Role {
  ADMIN
  USER
}

enum UserStatus {
  ACTIVE
  INACTIVE
}

enum Gender {
  MALE
  FEMALE
  OTHER
}

enum Title {
  MR
  MRS
  MS
  DR
}
